--- a/website/newsletter/163/index.mdx
+++ b/website/newsletter/163/index.mdx
@@ -8,7 +8,15 @@ unlisted: true
 
 Hi everyone!
 
-<Todo />
+There's a lot of content this week! Releases, but also some very good React articles. And there's no end in sight, with some great React conferences coming up: React Advanced, Next.js Conf, reactjsday...
+
+I've also got some great news to share with you in advance: I'm about to become the father of a little girl 🤗
+
+For the 1st time ever, the newsletter will be taking a long break of several weeks, starting now. The next newsletter issue is scheduled for November 29.
+
+Otherwise I'm staying on course to pass 30,000 subscribers by the end of the year, so while I'm away, keep bringing me new mates 😜
+
+Thanks and see you soon 👋
 
 <!-- truncate -->
 
@@ -34,8 +42,77 @@ Learn React.js from the ground up to advanced topics like performance, testing, 
 
 ## ⚛️ React {#react}
 
-- 💸 [Create collaborative applications like Figma and Miro in a few lines of code with Ably's in-app collaboration SDK](https://hubs.la/Q023nqgg0)
+[![TanStack Query v5](/emails/issues/163/tanstack-query-v5.jpg)](https://tanstack.com/blog/announcing-tanstack-query-v5)
 
+[**TanStack Query v5**](https://tanstack.com/blog/announcing-tanstack-query-v5)
+
+Après de nombreuses pré-releases, la v5 de TanStack Query sort en version stable, y compris l'interface React Query. On y retrouve en particulier:
+
+- une API unifiée, mieux typée, sans overloads
+- support Suspense stable. Streaming, React Server Components (expérimental)
+- de nombreuses autres améliorations: infinite queries, persistence, devtools, optimistic updates, useMutationState...
+
+https://twitter.com/TkDodo/status/1714262102305632643
+
+---
+
+[![Rspress v1.0 - A fast Rspack-based static site generator](/emails/issues/163/rspress.jpg)](https://github.com/orgs/web-infra-dev/discussions/5)
+
+[**Rspress v1.0 - A fast Rspack-based static site generator**](https://github.com/orgs/web-infra-dev/discussions/5)
+
+Première version stable pour générateur de site statique venant de l'équipe ByteDance, basé sur Rust, React et MDX. Un concurrent sérieux pour Docusaurus, Nextra, Vitepress, Starlight et autres solutions orientées contenu. Rspress affiche de très bonnes performances au build, tout en présentant une belle liste de features: i18n, versioning, search... La compétition devient rude, et ça me motive encore plus pour ajouter du Rust dans Docusaurus 😄!
+
+https://twitter.com/sebastienlorber/status/1714600933810655608
+
+---
+
+[![Remix - Vite Support](/emails/issues/163/remix-vite.jpg)](https://remix.run/docs/en/dev/future/vite)
+
+[**Remix - Vite Support (Unstable)**](https://remix.run/docs/en/dev/future/vite)
+
+Remix explique le choix de devenir un plugin Vite dans cette [proposal](https://github.com/remix-run/remix/discussions/7632). Cela lui permet d'ouvrir son compilateur et de devenir plus flexible en laissant la possibilité d'ajouter ses propres plugins Vite pour gérer divers scenarios: MDX, GraphQL, Tailwind, path aliases...
+
+https://twitter.com/remix_run/status/1712881668560691613
+
+https://twitter.com/remix_run/status/1713916968753885244
+
+---
+
+[![Statically analysing React components for fun and profit](/emails/issues/163/react-forget.jpg)](https://www.youtube.com/watch?v=kjOacmVsLSE)
+
+🎥 [**Statically analysing React components for fun and profit**](https://www.youtube.com/watch?v=kjOacmVsLSE)
+
+Sathya travaille sur React Forget, le compiler tant attendu. Ce talk nous dévoile quelques détails intéressants:
+
+- Le compiler est possible grace au "nouveau" modèle de React, qui n'utilise plus de classes ou de `this`
+- Il raisonne localement, est capable d'optimiser en parallèle, et peut être adopté incrémentalement
+- Il fonctionne sur du JavaScript non typé, et comprends les conventions React comme les hooks et le prefix "use"
+- Son système d'alias analysis est encore plus complèxe que celui du moteur V8
+
+Sathya annonce qu'on devrait en entendre plus souvent parler dans les semaines à venir, notamment dans le talk ["Understanding Idiomatic React" à React Advanced](https://reactadvanced.com/schedule-offline) dans à peine 2 jours. Bref, on a hâte d'en savoir plus!
+
+https://twitter.com/sebastienlorber/status/1714334740445118795
+
+---
+
+- 💸 [Create collaborative applications like Figma and Miro in a few lines of code with Ably's in-app collaboration SDK](https://hubs.la/Q023nqgg0)
+- 📜 [Vercel - How we optimized package imports in Next.js](https://vercel.com/blog/how-we-optimized-package-imports-in-next-js): explique le fonctionnement de `optimizePackageImports`, une option ajoutée dans la dernière version de Next.js pour optimiser l'import des "Barrel files", ces `index.js` qui re-exporte plusieurs modules et causent des soucis de performance. https://twitter.com/shuding_/status/1712849886050218279
+- 📜 [Unlocking the Power of Storybook](https://formidable.com/blog/2023/unlocking-the-power-of-storybook/): un excellent article qui partage de nombreuses astuces pragmatiques sur l'usage de Storybook pour itérer plus vite. Si vous avez un Storybook, je vous conseille vivement d'utiliser des tests de régression visuels.
+- 📜 [React useTransition: performance game changer or...?](https://www.developerway.com/posts/use-transition): article intéractif qui illustre un cas classique où une update React bloque le thread principal. Explique comment utiliser correctement les transitions et le concurrent rendering pour améliorer l'UX.
+- 📜 [React memo is good actually](https://timtech.blog/posts/react-memo-is-good-actually/): reflexions intéressantes sur l'usage de mémoisation en React. Un point sur lequel je ne suis d'accord: pour moi [🐦 les optimisations devraient être encapsulées](https://twitter.com/sebastienlorber/status/1709258823582564644).
+- 📜 [A love letter to the Remix loader](https://laconicwit.com/a-love-letter-to-the-remix-loader/): apologie du loader Remix, une abstraction élégante, dynamique, facile à typer. Décrit aussi quelques challenges à surmonter.
+- 📜 [Programmatic SEO in Next.js](https://practicalprogrammatic.com/blog/programmatic-seo-in-nextjs/): propose de générer des pages Next.js avec les RSCs en fonction d'un jeu de données.
+- 📜 [Classed Components](https://flexible.dev/blog/single-line-components/): propose de simplifier l'usage de Tailwind en ré-utilisant une technique de styled-components et package `@tw-classed/react`
+- 📜 [The Rise of Next.js: Why It's the Full-Stack Framework of Choice for Modern Websites](https://www.felixvemmer.com/blog/why-next-js/): article bien documenté qui donne de bonnes raisons d'utiliser Next.js
+- 📜 [Embedding Remix in Directus](https://echobind.com/post/embedding-remix-in-directus)
+- 📜 [Storybook - Introducing the Theme Switcher addon](https://storybook.js.org/blog/introducing-theme-switcher-addon/)
+- 📜 [Benchmarking MobX-State-Tree Performance](https://coolsoftware.dev/blog/benchmarking-mobx-state-tree/)
+- 📦 [Remix v2.1 - Experimental support for View Transitions](https://github.com/remix-run/remix/releases/tag/remix%402.1.0) https://twitter.com/remix_run/status/1713967835410514103
+- 📦 [Astro v3.3 - New experimental Picture component, shikiji syntax highlighting](https://astro.build/blog/astro-330/) https://twitter.com/astrodotbuild/status/1712487761570115931
+- 📦 [create-t3-app v7.22 - add Next.js App Router option](https://github.com/t3-oss/create-t3-app/releases/tag/create-t3-app%407.22.0) https://twitter.com/t3dotgg/status/1713790082661175359
+- 📦 [Legend-State v2.0 - Performance, Persistence, DX improvements](https://legendapp.com/open-source/legend-state-v2/)
+- 📦 [Next-international v1.1 - Improved App Router support](https://github.com/QuiiBz/next-international/releases/tag/1.1.0) https://twitter.com/tomlienard/status/1712466650434269320
+- 👥 [Next.js Conf - 26 October - Speakers announced](https://nextjs.org/conf/speakers)
 - 👥 [React Advanced](https://reactadvanced.com/?utm_source=email&utm_medium=thisweekinreact) (London 🇬🇧, October 20-23) is offering us [\-10% - code "REACT10"](https://ti.to/gitnation/react-advanced-london-2023/discount/REACT10)
 
 <SubscribeFormEmbed placement="middle" />
@@ -61,22 +138,43 @@ Use CoderPad to run fast, fair and real coding interviews that candidates and in
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+[![Gluestack](/emails/issues/163/gluestack.jpg)](https://gluestack.io/ui/v1)
+
+[**Gluestack-ui v1.0 - Universal & Accessible UI Components for React Native & Web, Unstyled & Themed**](https://gluestack.io/ui/v1)
+
+Sortie en version v1.0 stable pour cette nouvelle solution de styling cross-platform en React-Native. On peut dire qu'il y a déjà pas mal de choses fournies dans cette version: plugin VSCode, kit Figma, support Expo et Next.js, primitives headless et stylisées. Il va falloir étudier tout ça de plus près! J'ai l'impression que le support RSC avec Next.js est encore limité, et il faudra utiliser "use client".
+
+https://twitter.com/sanketsahu/status/1712729417309626570
+
+---
 
 - 💸 [Moropo - build and scale open-source React Native tests 10x quicker](https://www.moropo.com/for-react-native?utm_source=newsletter&utm_medium=emails&utm_campaign=twir-20231018)
+- 📜 [Expo - Three ways to use network debugging](https://blog.expo.dev/three-ways-to-use-network-debugging-75fa6118fac6)
+- 📦 [React-Native 0.72.6](https://github.com/facebook/react-native/releases/tag/v0.72.6) https://twitter.com/alxhnt/status/1712513763298128320
+- 📦 [react-native-visionos](https://github.com/callstack/react-native-visionos): le fork React-Native de Callstack qui fait tourner React-Native sur VisionOS a été publié. https://twitter.com/o_kwasniewski/status/1714267035583328452
+- 📦 [react-native-unistyles v1.0](https://github.com/jpudysz/react-native-unistyles): version stable pour cette nouvelle solution de styling cross-platform qui propose d'améliorer la DX de React-Native StyleSheet. https://twitter.com/jpudysz/status/1714189338458624278
+- 📦 [VisionCamera v3.4 - 7x faster](https://github.com/mrousavy/react-native-vision-camera/releases/tag/v3.4.0) https://twitter.com/mrousavy/status/1713939416463397165
+- 📦 [React-Native-Screens v3.26 - useAnimatedHeaderHeight](https://github.com/software-mansion/react-native-screens/releases/tag/3.26.0) https://twitter.com/swmansion/status/1714324990491762873
+- 📦 [react-native-vercel-ai - cross-platform interface to Vercel AI](https://github.com/bidah/react-native-vercel-ai)
+- 📦 [radix-ui-react-native-icons](https://github.com/Eronred/radix-ui-react-native-icons)
 
 ---
 
 ## 🔀 Other {#other}
 
-<Todo />
+- 👀 [TC39-TG4 - New Task Group created to standardize Source Maps](https://www.ecma-international.org/news/ecma-tc39-ecmascript-initiates-a-new-task-group-to-standardize-source-maps//)
+- 📜 [You can't get faster than No Build](https://world.hey.com/dhh/you-can-t-get-faster-than-no-build-7a44131c)
+- 📜 [Why Fetch Promise Doesn't Reject on Error Responses](https://kettanaito.com/blog/why-fetch-promise-doesnt-reject-on-error-responses)
+- 📜 [DefinitelyTyped is a monorepo!](https://jakebailey.dev/posts/pnpm-dt-3/)
+- 📦 [Node.js v21 - stable fetch/WebStreams, default module system flag, V8 11.8, v20 going LTS...](https://openjsf.org/announcement/2023/10/17/node-js-21-available-now/)
+- 📦 [Parcel v2.10 - big performance improvements](https://github.com/parcel-bundler/parcel/releases/tag/v2.10.0)
+- 📦 [Oslo - A collection of auth-related utilities](https://github.com/pilcrowOnPaper/oslo)
+- 📦 [async-cache-dedupe v2](https://github.com/mcollina/async-cache-dedupe)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
-
-[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![alt](/emails/issues/163/meme.jpg)](https://twitter.com/BHolmesDev/status/1713177728143241403)
 
 See ya! 👋
