--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/163/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/163/index.mdx
@@ -3,7 +3,6 @@ slug: /163
 title: "React Hebdo #163: React-Query, React-Forget, Rspress, Remix Vite, Next.js Barrels, Storybook, Memo, Transitions, Gluestack, VisionCamera, Unistyles, VisionOS, Expo debugging..."
 authors: [slorber]
 date: 10-17-2023
-unlisted: true
 ---
 
 Salut à tous !
@@ -150,7 +149,7 @@ https://twitter.com/sanketsahu/status/1712729417309626570
 
 - 💸 [Moropo - build and scale open-source React Native tests 10x quicker](https://www.moropo.com/for-react-native?utm_source=newsletter&utm_medium=emails&utm_campaign=twir-20231018)
 - 📜 [Expo - Three ways to use network debugging](https://blog.expo.dev/three-ways-to-use-network-debugging-75fa6118fac6)
-- 📦 [React-Native 0.72.6](https://github.com/facebook/react-native/releases/tag/v0.72.6) https://twitter.com/alxhnt/status/1712513763298128320
+- 📦 [React-Native 0.72.6 - CocoaPods installs fix](https://github.com/facebook/react-native/releases/tag/v0.72.6)
 - 📦 [react-native-visionos](https://github.com/callstack/react-native-visionos): le fork React-Native de Callstack qui fait tourner React-Native sur VisionOS a été publié. https://twitter.com/o_kwasniewski/status/1714267035583328452
 - 📦 [react-native-unistyles v1.0](https://github.com/jpudysz/react-native-unistyles): version stable pour cette nouvelle solution de styling cross-platform qui propose d'améliorer la DX de React-Native StyleSheet. https://twitter.com/jpudysz/status/1714189338458624278
 - 📦 [VisionCamera v3.4 - 7x faster](https://github.com/mrousavy/react-native-vision-camera/releases/tag/v3.4.0) https://twitter.com/mrousavy/status/1713939416463397165
