--- a/website/newsletter/163/index.mdx
+++ b/website/newsletter/163/index.mdx
@@ -13,7 +13,7 @@ I've also got some great news to share with you in advance: I'm about to become 
 
 For the 1st time ever, the newsletter will be taking a long break of several weeks, starting now. The next newsletter issue is scheduled for November 29.
 
-Otherwise I'm staying on course to pass 30,000 subscribers by the end of the year, so while I'm away, keep bringing me new mates 😜
+Otherwise I'm staying on course to pass 30,000 subscribers by the end of the year. While I'm away, you can keep bringing me new mates 😜
 
 Thank you and see you soon 👋
 
