--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/164/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/164/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /164
-title: "React Hebdo #164: ..."
+title: "React Hebdo #164: le grand retour! 30k, Next.js, Remix, Taint API, Activity, RSCs, React-Forget, Docusaurus, MDX, Storybook, Expo Orbit, Ignite, Victory XL, Reanimated, TypeScript..."
 authors: [slorber]
 date: 11-29-2023
 unlisted: true
@@ -10,19 +10,14 @@ Salut à tous !
 
 Ça fait longtemps, j'espère que je ne vous ai pas trop manqué 😄
 
-J'étais en congé paternité et j'ai pris le temps de profiter de ma petite Louise 👨‍🍼
+J'étais en congé paternité et j'ai bien profité de ma petite Louise 👨‍🍼
 😍.
 
 Ça n'a pas freiné pour autant la croissance de cette newsletter qui vient juste de [passer les 30.000 abonnés](https://www.indiehackers.com/product/french-react-newsletter/30-000-subscribers--NkKag3m683I_z7J3TCI)! 🥳️
 
 C'est la première fois que je fais une pause aussi longue (5 semaines), et la reprise est difficile. Vous savez que j'aime être exhaustif, mais impossible pour moi de lire et commenter tout ce qui s'est passé depuis la dernière édition 😅. Bref cet email va contenir beaucoup de liens intéressants, mais pas forcément commentés, je ferai mieux la semaine prochaine, promis!
 
-À l'avenir, j'aimerais trouver quelqu'un pour m'aider et faire en sorte d'avoir une édition chaque semaine de l'année: si tu es
-
-30k: https://www.indiehackers.com/product/french-react-newsletter/30-000-subscribers--NkKag3m683I_z7J3TCI
-
-- https://twitter.com/sebastienlorber/status/1729452943412240819
-- https://www.linkedin.com/posts/sebastienlorber_reactjs-reactnative-activity-7135220529392676864-Crxg
+À l'avenir, j'aimerais rendre ce projet plus pro, faire en sorte d'avoir une édition chaque semaine de manière consistante. Je [cherche quelqu'un pour m'aider](https://thisweekinreact.com/job). Si tu es intéressé, n'hésites pas à postuler (rémunéré).
 
 <!-- truncate -->
 
