--- a/website/src/pages/job.mdx
+++ b/website/src/pages/job.mdx
@@ -2,7 +2,7 @@
 
 Hey, Sebastien from [This Week In React](http://thisweekinreact.com/) here 👋
 
-I'm looking for a clone of myself to help me run this newsletter 😄
+I'm looking for a clone of myself to help me create the content of this newsletter 😄
 
 Why would you want to help me?
 
@@ -14,9 +14,9 @@ Why would you want to help me?
 
 The ideal candidate:
 
-- is as knowledgeable as I am on React and React-Native
-- is able curate and comment a full issue on their own when I'm not available
-- is willing to commit 10-16h per issue
+- is knowledgeable on both React and React-Native
+- is able to curate and comment a full issue on their own when I'm not available
+- is willing to commit 10-16h of work per issue
 - is willing to do this on a long term basis
 - is able to communicate clearly and use a simple, concise language
 - has a good radar for interesting weak signals, and a good bullshit content detector
@@ -26,4 +26,4 @@ If you can do 80% of what I do, that's ok probably for me, I know I won't find a
 
 We can start small with single week test, then replace me when I'm on off, and then scale and let you write half of the issues if things go well.
 
-Email me at sebastien+twir-job@thisweekinreact.com to discuss details.
+Interested? Email me at sebastien+twir-job@thisweekinreact.com to discuss details.
