--- a/website/newsletter/164/index.mdx
+++ b/website/newsletter/164/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /164
-title: "This Week In React #164: ..."
+title: "This Week In React #164: so back! 30k, Next.js, Remix, Taint API, Activity, RSCs, React-Forget, Docusaurus, MDX, Storybook, Expo Orbit, Ignite, Victory XL, Reanimated, TypeScript..."
 authors: [slorber]
 date: 11-29-2023
 unlisted: true
