--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/164/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/164/index.mdx
@@ -81,6 +81,7 @@ Voir aussi:
 - 📜 [Why I'm Using Next.js](https://leerob.io/blog/using-nextjs)
 - 📜 [Why I Won't Use Next.js](https://www.epicweb.dev/why-i-wont-use-nextjs)
 - 📜 [What do we know about React Forget](https://www.code-insights.dev/posts/what-do-we-konw-about-react-forget)
+- 📜 [Using Selectlist in React](https://polypane.app/blog/using-selectlist-in-react/)
 - 📜 [A Complete Guide To Using Cookies in Next.js](https://www.propelauth.com/post/cookies-in-next-js)
 - 📜 [Pierre's Next.js Cache Strategy](https://pierre.co/share/fe34c8b7-4054-4e07-b108-c6c8230cfab1)
 - 📜 [React Server Components - Introduction and Background](https://jessedit.tech/articles/react-server-components/1-background/)
