--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/164/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/164/index.mdx
@@ -9,8 +9,7 @@ Salut à tous !
 
 Ça fait longtemps, j'espère que je ne vous ai pas trop manqué 😄
 
-J'étais en congé paternité et j'ai bien profité de ma petite Louise 👨‍🍼
-😍.
+J'étais en congé paternité et j'ai bien profité de ma petite Louise 👨‍🍼😍.
 
 Ça n'a pas freiné pour autant la croissance de cette newsletter qui vient juste de [passer les 30.000 abonnés](https://www.indiehackers.com/product/french-react-newsletter/30-000-subscribers--NkKag3m683I_z7J3TCI)! 🥳️
 
