--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/164/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/164/index.mdx
@@ -11,7 +11,7 @@ Salut à tous !
 
 J'étais en congé paternité et j'ai bien profité de ma petite Louise 👨‍🍼😍.
 
-Ça n'a pas freiné pour autant la croissance de cette newsletter qui vient juste de [passer les 30.000 abonnés](https://www.indiehackers.com/product/french-react-newsletter/30-000-subscribers--NkKag3m683I_z7J3TCI)! 🥳️
+Mon absence n'a pas freiné pour autant la croissance de cette newsletter qui vient juste de [passer les 30.000 abonnés](https://www.indiehackers.com/product/french-react-newsletter/30-000-subscribers--NkKag3m683I_z7J3TCI)! 🥳️
 
 C'est la première fois que je fais une pause aussi longue (5 semaines), et la reprise est difficile. Vous savez que j'aime être exhaustif, mais impossible pour moi de lire et commenter tout ce qui s'est passé depuis la dernière édition 😅. Bref cet email va contenir beaucoup de liens intéressants, mais pas forcément commentés, je ferai mieux la semaine prochaine, promis!
 
